# lab2_search

./: CMakeLists.txt  CreateArray.hpp  Dict.hpp  HelpArray.hpp  HelpList.hpp  Hist.hpp  LinkedList.hpp  README.md  keyboard.hpp  main.cpp  pagination_time_test.hpp  ready_hist_tests.hpp  ready_paginator_tests.hpp  time_hist_test.hpp
