cmake_minimum_required(VERSION 3.19)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp ArraySequence.hpp CreateArray.hpp Dict.hpp DictList.hpp DictNode.hpp DynamicArray.hpp HelpArray.hpp HelpList.hpp Hist.hpp Idictionary.hpp LinkedList.hpp Paginator.hpp ListSequence.hpp SubExpressionArray.hpp SubExpressionList.hpp keyboard.hpp pagination_time_test.hpp ready_hist_tests.hpp ready_paginator_tests.hpp ready_subexpressions_tests.hpp sequence.hpp sort.hpp time_hist_test.hpp visualisation.hpp)